# idservice

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
idservice/: __init__.py  __main__.py  api.py  config.py  service.py
idservice/api/: __init__.py  config.py  service.py
scripts/: build.sh  dev.sh  production.sh  publish.sh
