[tool.poetry]
name = "idservice"
version = "0.1.0"
description = ""
authors = ["Xu Yijun <xuyijun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.13.4"
fastapi = "^0.63.0"
configprops = "^1.4.0"
meinheld = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
