[tool.poetry]
name = "idservice"
version = "1.4.0"
description = "Distributed ID generator microservice based on FastAPI"
authors = ["Xu Yijun <xuyijun@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tommyxu/idservice"
repository = "https://github.com/tommyxu/idservice"
classifiers=[  # Optional
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    # Pick your license as you wish
    "License :: OSI Approved :: MIT License",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    # These classifiers are *not* checked by 'pip install'. See instead
    # 'python_requires' below.
    # "Programming Language :: Python :: 2",
    # "Programming Language :: Python :: 2.7",
    # "Programming Language :: Python :: 3",
    # "Programming Language :: Python :: 3.5",
    # "Programming Language :: Python :: 3.6",
    # "Programming Language :: Python :: 3.7",
    "Environment :: Console",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
fastapi = "^0.63.0"
configprops = "^1.4.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"
pex = "^2.1.37"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
